# websocket_server

./: CMakeLists.txt  LICENSE  readme.md  server.cpp
src/: Room.cpp  Room.h  User.cpp  User.h  Webchat.cpp  Webchat.h  WebsocketServer.cpp  WebsocketServer.h  utills.cpp  utills.h
tests/: test_chat.cpp  test_room.cpp  test_user.cpp
